# bevy_hijinks

./: Cargo.toml
src/: main.rs
src/components/: entities.rs  mod.rs  physical_attributes.rs  physics.rs  resources.rs  ui.rs
src/systems/: gamestate.rs  input.rs  mod.rs  orbital_plugin.rs  physics.rs  planet_generation.rs  setup.rs  trail.rs  ui.rs
