[package]
name = "orbital_bevy"
version = "0.1.0"
authors = ["Lee Martin <lee.martin@pliminus.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_prototype_lyon = "0.3.1"
rand = "0.8.4"
rand_seeder = "0.2.2"
rand_pcg = "0.3.1"